tests/ui/rfc-2093-infer-outlives/projection.rs
#![feature(crablangc_attrs)]

#[crablangc_outlives]
struct Foo<'a, T: Iterator> { //~ ERROR crablangc_outlives
    bar: &'a T::Item
}

fn main() {}
